# hotstuff-digital-signature-benchmarking

./: .gitignore  Cargo.toml  README.md
benchmark/: fabfile.py  settings.json
benchmark/benchmark/: commands.py  config.py  instance.py  local.py  logs.py  utils.py
benchmark/results/: bench-0-4-30000-512.txt  bench-0-4-50000-512.txt
consensus/: Cargo.toml
consensus/src/: aggregator.rs  config.rs  core.rs  messages.rs
consensus/src/tests/: consensus_tests.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
crypto/src/tests/: crypto_tests.rs
mempool/src/: batch_maker.rs  lib.rs
node/: Cargo.toml
node/src/: client.rs  config.rs  main.rs  node.rs
off-chain-benchmarking/: bls.py  ecdsa.py  eddsa.py  main.py  schnorr.py
off-chain-benchmarking/production/: Cargo.toml
off-chain-benchmarking/production/src/: eddsa_threshold.rs  main.rs
off-chain-benchmarking/self-implementations/: bls.py  ecdsa.py  eddsa.py  main.py
store/: Cargo.toml
