[package]
name = "crypto"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
ed25519-dalek = { version = "1.0.1", features = ["batch"] }
serde = { version = "1.0", features = ["derive"] }
rand7 = { package = "rand", version = "0.7.3" }
rand = "0.8"
rand_core = "0.6.0"
base64 = "0.13.0"
bls-signatures = { git = "https://github.com/filecoin-project/bls-signatures/" }
bls12_381 = { version = "=0.7.0", features = ["experimental"] }
sha2 = { version = "0.9"}
ff = "0.12"