[package]
name = "off-chain-benchmarking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bls-signatures = { git = "https://github.com/filecoin-project/bls-signatures/" }
rand7 = { package = "rand", version = "0.7.3" }
rand8 = { package = "rand", version = "0.8" }
rand_core = "0.6.0"
rand_chacha = "0.3.1"
rayon = { version = "1", optional = true }

[dependencies.ed25519-dalek]
version = "1"
